# CameraXApp

./: LICENSE  README.md
app/: build.gradle.kts
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  cameraxapp.cpp  opencv-utils.cpp  opencv-utils.h  utils.cpp  utils.h
app/src/main/cpp/include/: csk.hpp  data_read.hpp  img_proc.hpp  ook.hpp
app/src/main/cpp/src/: csk.cpp  data_read.cpp  img_proc.cpp  ook.cpp
app/src/main/java/com/example/cameraxapp/: MainActivity.kt  MainActivity2.kt  MainMenu.kt  MethodAdapter.kt  RealTime.kt  VidCapTemplate.kt  VidProcPost.kt  VidResults.kt
app/src/main/res/drawable/: qr_code_overlay.xml  rounded_background.xml
app/src/main/res/layout/: activity_main2.xml  activity_main_menu.xml  activity_real_time.xml  activity_vid_cap_template.xml  activity_vid_proc_post.xml  activity_vid_results.xml  item_method.xml
app/src/main/res/values/: colors.xml  core_values.xml  strings.xml
docs/: cpp.md  user_doc.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
